--- a/src/app/modules/forgot-password/forgot-password.component.css
+++ b/src/app/modules/forgot-password/forgot-password.component.css
@@ -80,17 +80,17 @@ form .field input:focus::placeholder {
 .form-inner form .pass-link {
   margin-top: 5px;
 }
-.form-inner form .signup-link {
+.signup-link {
   text-align: center;
-  margin-top: 30px;
+
 }
-.form-inner form .pass-link a,
-.form-inner form .signup-link a {
-  color: #363535;
+.pass-link a,
+.signup-link a {
+  color: rgb(151, 147, 147);
   text-decoration: none;
 }
-.form-inner form .pass-link a:hover,
-.form-inner form .signup-link a:hover {
+.pass-link a:hover,
+.signup-link a:hover {
   text-decoration: underline;
 }
 form .btn {
@@ -132,4 +132,20 @@ form .btn input[type="submit"] {
   .wrapper{
     width: 80%;
   }
+}
+/*validate*/
+.form-inner form .field input.ng-touched.ng-valid{
+  border: 2px solid gray;
+}
+
+.form-inner form .field input.ng-touched{
+  border: 2px solid red;
+}
+
+.form-inner form .field:last-child{
+  margin: 25px 0;
+}
+
+.alert-danger {
+  color: red;
 }
