--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,8 +8,8 @@
       <i class="fab fa-google-plus-g"></i>
       <i class="fab fa-instagram"></i>
       <i class="fas fa-rss"></i>
-      <button type="button" class="btn btn-dark"><a routerLink="/login">Đăng nhập</a></button>
-      <button type="button" class="btn btn-dark"><a routerLink="/register">Đăng ký</a></button>
+      <button type="button" class="btn btn-dark" routerLink ="/login">Đăng nhập</button>
+      <button type="button" class="btn btn-dark" routerLink ="/register">Đăng ký</button>
     </div>
   </div>
   <nav class="navbar navbar-expand-md ">
@@ -51,7 +51,7 @@
       <a routerlink="#" class="breaking-news">
         <p class="bntime">23 04 2020</p>
         Những tin tức hài hước nhất về Trump</a>
-      <a routerlink="#" class="breaking-news"><p class="bntime">29 11 2020</p>Maria ozawa giải nghệ phim sex Nhật Bản</a>
+      <a routerlink="#" class="breaking-news"><p class="bntime">29 11 2020</p>Kịch tấu của Hoài Linh.</a>
       <a routerlink="#" class="breaking-news"><p class="bntime">23 12 2020</p>Bộ truyện cười hài hước nhất được phát hành</a>
     </marquee>
   </div>
