--- a/src/app/modules/detail-post/detail-post.component.html
+++ b/src/app/modules/detail-post/detail-post.component.html
@@ -1,1 +1,158 @@
-<p>detail-post works!</p>
+<header>
+  <div class="website-header">
+    <img src="../../../../assets/images/mainLogo.png">
+    <h1>Meme Website</h1>
+    <div class="social-icons">
+      <i class="fab fa-facebook-f"></i>
+      <i class="fab fa-twitter"></i>
+      <i class="fab fa-google-plus-g"></i>
+      <i class="fab fa-instagram"></i>
+      <i class="fas fa-rss"></i>
+      <button type="button" class="btn btn-dark" routerLink ="/login">Đăng nhập</button>
+      <button type="button" class="btn btn-dark" routerLink ="/register">Đăng ký</button>
+    </div>
+  </div>
+  <nav class="navbar navbar-expand-md ">
+<!-- Brand -->
+
+
+<!-- Toggler/collapsibe Button -->
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+<span class="navbar-toggler-icon"></span>
+</button>
+
+<!-- Navbar links -->
+<div class="collapse navbar-collapse" id="collapsibleNavbar">
+<ul class="navbar-nav">
+  <li class="nav-item">
+    <a class="nav-link" routerlink="#">Trang chủ</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerlink="#">HOT</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerlink="#">Truyện cười</a>
+  </li>
+<li class="nav-item">
+    <a class="nav-link" routerlink="#">Võ thuật</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerlink="#">Chế ảnh</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" routerlink="#">Chế ảnh</a>
+</li>
+</ul>
+</div>
+  </nav>
+  <div class="breaking-news-section">
+    <span id="btext">Bài đăng hot</span>
+    <marquee direction="left">
+      <a routerlink="#" class="breaking-news">
+        <p class="bntime">23 04 2020</p>
+        Những tin tức hài hước nhất về Trump</a>
+      <a routerlink="#" class="breaking-news"><p class="bntime">29 11 2020</p>Kịch tấu của Hoài Linh.</a>
+      <a routerlink="#" class="breaking-news"><p class="bntime">23 12 2020</p>Bộ truyện cười hài hước nhất được phát hành</a>
+    </marquee>
+  </div>
+</header>
+<div class="body-card">
+  <div class="card-post">
+    <h2> {{data.title}}</h2>
+    <a ><img src="../../../../../assets/images/world1.jpg" class="title-post"></a>
+    <p><span class="label-post">Được đăng bởi:</span> {{data.username}}</p>
+    <p><span class="label-post">Ngày đăng:</span> {{data.posted_date}}</p>
+    <p><span class="label-post">Trạng thái:</span> {{data.status}}</p>
+    <p></p>
+    <div class="card-button">
+      <a class="up">
+        <img src="../../../../../assets/images/up.png" alt="up">
+      </a>
+      <a class="down">
+        <img src="../../../../../assets/images/down.png" alt="down">
+      </a>
+      <a class="comment" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <img src="../../../../../assets/images/comment.png" alt="comment">
+      </a>
+      <a type="button" class="more" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+        <img src="../../../../../assets/images//more.png" alt="more">
+      </a>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+      </div>
+    </div>
+    <div class="card-comment collapse" id="collapseExample">
+      <textarea class="user-comment" name="comment" placeholder="Comment here..."></textarea>
+      <input type="submit" value="Enter" name="submit-comment" class="btn btn-dark">
+    </div>
+  </div>
+
+</div>
+
+<footer id="footer">
+  <div class="list-service container">
+    <div class="first-service">
+      <div class="support">
+        <label class="label-service">Về chúng tôi</label>
+        <ul class="ul-service">
+          <li class="li-service"><a href="#" class="a-service">Bản đồ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Chính sách</a></li>
+          <li class="li-service"><a href="#" class="a-service">Ưu đãi</a></li>
+          <li class="li-service"><a href="#" class="a-service">Điều khoản và luật lệ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Liên lạc</a></li>
+        </ul>
+      </div>
+      <div class="support">
+        <label class="label-service">Hỗ trợ</label>
+        <ul class="ul-service">
+          <li class="li-service"><a href="#" class="a-service">Bản đồ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Chính sách</a></li>
+          <li class="li-service"><a href="#" class="a-service">Ưu đãi</a></li>
+          <li class="li-service"><a href="#" class="a-service">Điều khoản và luật lệ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Liên lạc</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="second-service">
+      <div class="service">
+        <a class="label-service">Dịch vụ</a>
+        <ul class="ul-service">
+          <li class="li-service"><a href="#" class="a-service">Bản đồ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Chính sách</a></li>
+          <li class="li-service"><a href="#" class="a-service">Ưu đãi</a></li>
+          <li class="li-service"><a href="#" class="a-service">Điều khoản và luật lệ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Liên lạc</a></li>
+        </ul>
+      </div>
+      <div class="information">
+        <a class="label-service">Thông tin</a>
+        <ul class="ul-service">
+          <li class="li-service"><a href="#" class="a-service">Bản đồ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Chính sách</a></li>
+          <li class="li-service"><a href="#" class="a-service">Ưu đãi</a></li>
+          <li class="li-service"><a href="#" class="a-service">Điều khoản và luật lệ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Liên lạc</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="detail-us">
+    <div class="text">
+      <a class="title-link">Về chúng tôi </a>&nbsp;<a class="title-link">Dịch vụ khách hàng </a>&nbsp;<a
+        class="title-link">Chính sách </a><a> 2020 web thời trang. Được làm bởi Hoàng Bảo </a>
+      <br>
+      <a class="link">Bản đồ</a> | <a class="link">Điều khoản</a> |
+      <a class="link">Tìm kiếm nhanh</a> | <a class="link">Đặt hàng nhanh</a> | <a class="link">Liên hệ
+        chúng tôi</a>
+    </div>
+    <div class="social">
+      <i class="fab fa-facebook-f"></i>
+      <i class="fab fa-twitter"></i>
+      <i class="fab fa-google-plus-g"></i>
+      <i class="fab fa-instagram"></i>
+      <i class="fas fa-rss"></i>
+    </div>
+  </div>
+</footer>
