--- a/src/app/modules/forgot-password/forgot-password.component.html
+++ b/src/app/modules/forgot-password/forgot-password.component.html
@@ -7,20 +7,41 @@
     </div>
     <div class="form-container">
       <div class="form-inner">
-        <form action="#" class="login">
+        <form class="form-group" name="formForgot">
           <div class="label-txt">
             <p>Dont’ worry! Just fill in your email and we’ll send you a link to reset your password</p>
           </div>
-          <div class="field" for="uname">
-            <input type="text" id="uname" placeholder="Email Address" required>
+          <div class="field" for="email">
+            <input
+            required
+            maxlength="30"
+            ngModel
+            pattern = "^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+            type="email"
+            id="email"
+            class="form-control"
+            name="email"
+            #email="ngModel"
+            placeholder="Email Address"
+            >
+            <div class="alert alert-danger"
+            *ngIf="email.touched && !email.valid">
+              <div *ngIf="email.errors.required">
+                Email is required
+              </div>
+              <div *ngIf="email.errors.maxlength">
+                Email is not valid
+              </div>
+            </div>
           </div>
           <div class="field btn">
             <div class="btn-layer"></div>
             <input type="submit" value="Reset password">
           </div>
-          <div class="signup-link">
-            If you had an account ? <a routerLink="/login">Cancel</a></div>
         </form>
+      </div>
+      <div class="signup-link">
+        If you had an account ? <a routerLink="/login">Cancel</a>
       </div>
     </div>
   </div>
