--- a/src/app/modules/home-page-content/home-page-content.component.css
+++ b/src/app/modules/home-page-content/home-page-content.component.css
@@ -63,6 +63,7 @@ section{
 	filter: brightness(0.4);
 }
 .more-news{
+  position: relative;
 	background-color: black;
 	display: flex;
 	flex-wrap: wrap;
@@ -79,7 +80,7 @@ section{
 	margin:0;
 }
 .world h2{
-	background-color: #b2175b;
+  background-color: darkblue;
 }
 .sport h2{
 	background-color: #3c1b75;
@@ -97,8 +98,10 @@ section{
 	flex-basis: 45%;
 }
 aside{
-	width: 90%;
-	padding: 10px;
+  position: absolute;
+  top: 0;
+  right: 5%;
+  max-height: auto;
 	flex-basis: 25%;
 	border: 1px solid #fff;
 	border-radius: 5px;
@@ -205,12 +208,35 @@ p{
     padding-bottom: 50px;
   }
 
-  .card-comment {
-    opacity: 0;
-  }
-
-  .comment:hover .card-comment{
-    opacity: 1;
+  .navbar-light {
+    margin-left:4%;
   }
 
 
+  #search-post {
+    outline: none;
+    border: none;
+    background-color: #e08b6c;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 8px;
+  }
+
+  #search-post:hover {
+    cursor: pointer;
+    color: #fff;
+    background-color: #b44219;
+  }
+
+  #form-search {
+    background: none;
+    border: 1px solid #dddddd;
+    outline: none;
+    padding: 8px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
+
+  #form-search:focus {
+    border: 1px solid #b44219;
+  }
