--- a/src/app/modules/register/register.component.css
+++ b/src/app/modules/register/register.component.css
@@ -35,36 +35,34 @@ body {
 
 .wrapper .form-container {
   width: 100%;
-  overflow: hidden;
 }
 .form-container .form-inner {
   display: flex;
+  flex-direction: column;
   width: 200%;
+  max-height: 100%;
 }
 .form-container .form-inner form {
   width: 50%;
   transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 .form-inner form .field {
+  margin: 30px 0;
   height: 50px;
   width: 100%;
-  margin-top: 20px;
 }
 .form-inner form .field input {
   height: 100%;
   width: 100%;
   outline: none;
+  box-shadow: 1px 1px 1px #fff;
   padding-left: 15px;
   border-radius: 5px;
-  border: 1px solid lightgrey;
   border-bottom-width: 2px;
   font-size: 17px;
   transition: all 0.3s ease;
 }
-.form-inner form .field input:focus {
-  border-color: #4f4f4f;
-  /* box-shadow: inset 0 0 3px #fb6aae; */
-}
+
 .form-inner form .field input::placeholder {
   color: #999;
   transition: all 0.3s ease;
@@ -73,14 +71,16 @@ form .field input:focus::placeholder {
   color: #b3b3b3;
 }
 .form-inner form .pass-link {
+  display: flex;
+  justify-content: space-between;
   margin-top: 5px;
 }
 .form-inner form .signup-link {
   text-align: center;
-  margin-top: 30px;
 }
 .form-inner form .pass-link a,
 .form-inner form .signup-link a {
+  cursor: pointer;
   color: #363535;
   text-decoration: none;
 }
@@ -100,7 +100,6 @@ form .btn .btn-layer {
   width: 300%;
   position: absolute;
   left: -100%;
-
   background: linear-gradient(90deg, rgba(62,58,58,1) 0%, rgba(79,79,79,1) 40%, rgba(221,221,221,1) 100%);
   border-radius: 5px;
   transition: all 0.4s ease;
@@ -123,8 +122,51 @@ form .btn input[type="submit"] {
   cursor: pointer;
 }
 
+.form-inner span {
+  margin-left: 13%;
+}
+
+.btn-router {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.btn-router:hover {
+  color: black;
+  border-bottom: 1px solid black;
+}
+
 @media screen and (max-width: 576px) {
   .wrapper{
     width: 80%;
   }
+
+  .form-inner span {
+    margin-left: 10%;
+  }
+}
+
+.btn-return {
+  color: rgb(151, 147, 147);
+}
+
+.btn-return:hover{
+  border-bottom: 1px solid #000000;
+}
+
+/*validate*/
+.form-inner form .field input.ng-touched.ng-valid{
+  border: 2px solid gray;
+}
+
+.form-inner form .field input.ng-touched{
+  border: 2px solid red;
+}
+
+.form-inner form .field:last-child{
+  margin: 45px 0;
+}
+
+.alert-error {
+  color: red;
 }
