--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -7,26 +7,82 @@
     </div>
     <div class="form-container">
       <div class="form-inner">
-        <form action="#" class="login">
+        <form #regForm="ngForm" class="form-group" name="formRegister" (ngSubmit)="registers(regForm)" novalidate>
           <div class="field" for="username">
-            <input type="text" id="username" placeholder="Username" required>
+            <input
+              required
+              minlength="6"
+              maxlength="20"
+              ngModel
+              class="form-control"
+              id="username"
+              #username="ngModel"
+              name="username"
+              type="text"
+              placeholder="Username"
+            >
+            <div class="alert-error"
+            *ngIf="(username.dirty || username.touched) && username.invalid">
+              <div *ngIf="username.errors.required">
+                Username is required
+              </div>
+              <div *ngIf="username.errors.minlength">
+                Username should be minimum {{username.errors.minlength.requiredLength}}.
+              </div>
+            </div>
           </div>
           <div class="field" for="email">
-            <input type="text" id="email" placeholder="Email Address" required>
+            <input
+            required
+            maxlength="30"
+            ngModel
+            pattern = "^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+            type="email"
+            id="email"
+            class="form-control"
+            name="email"
+            #email="ngModel"
+            placeholder="Email Address"
+            >
+            <div class="alert-error"
+            *ngIf="email.touched && !email.valid">
+              <div *ngIf="email.errors.required">
+                Email is required
+              </div>
+              <div *ngIf="email.errors.maxlength">
+                Email is not valid
+              </div>
+            </div>
           </div>
-          <div class="field" for="pw">
-            <input type="password" id="pw" placeholder="Enter Your Password" required>
+          <div class="field" for="password">
+            <input
+            required
+            minlength="8"
+            ngModel
+            pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}"
+            type="password"
+            class="form-control"
+            id="password"
+            #password="ngModel"
+            name="password"
+            placeholder="Password" >
+            <div class="alert-error"
+            *ngIf="password.touched && !password.valid">
+              <div *ngIf="password.errors.required">
+                Password is required
+              </div>
+              <div *ngIf="password.errors.pattern">
+                Password have to lowercase, uppercase letters, numbers, special characters, at least 8 characters
+              </div>
+            </div>
           </div>
-          <div class="field" for="pw">
-            <input type="password" id="pw" placeholder="Enter Your Password Again" required>
-          </div>
+
           <div class="field btn">
             <div class="btn-layer"></div>
             <input type="submit" value="Sign Up">
           </div>
-          <div class="signup-link">
-            If you had an account? <a routerLink="/login">Cancel</a></div>
         </form>
+          <span>If you had an account? <a routerLink="/login" class="btn-return">Cancel</a></span>
       </div>
     </div>
   </div>
