--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="advertise">
-  <img src="https://ua.siteground.com/img/banners/general/2019_EN/no_price/start_site_728x90_green.jpg" alt="Web Hosting" class="advertise-img">
+  <img src="../../../../assets/images/advertise.jpeg" alt="Web Hosting" class="advertise-img">
 </div>
 
 <footer id="footer">
