--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,3 +1,10 @@
+<header>
+   <!-- Compiled and minified CSS -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+   <!-- Compiled and minified JavaScript -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</header>
 <body>
   <div class="wrapper">
     <div class="title-text">
@@ -7,43 +14,41 @@
     </div>
     <div class="form-container">
       <div class="form-inner">
-        <form [formGroup]="form" class="login form-group">
+        <form [formGroup]="loginForm" class="login form-group" (ngSubmit)="onSubmit()">
           <div class="field" for="username">
             <input
-              minlength="5"
-              maxlength="20"
-              ngModel
-              pattern="^[a-zA-Z0-9]+$"
+              type="text"
               formControlName="username"
               class="form-control"
-              id="username"
-              name="username"
-              type="text"
               placeholder="Username"
-              required
+              [ngClass]="{ 'is-invalid': submitted && f.username.errors }"
+
             >
+            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+              <div *ngIf="f.username.errors.required">Username is required</div>
+          </div>
           </div>
           <div class="field" for="password">
             <input
-            minlength="6"
-            ngModel
             formControlName="password"
             type="password"
             class="form-control"
-            id="password"
-            name="password"
             placeholder="Password"
-            required
+            [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
             >
+            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+              <div *ngIf="f.password.errors.required">Password is required</div>
+          </div>
           </div>
           <div class="pass-link">
             <a routerLink="/forgot-password">Forgot password?</a>
             <a routerLink="/">Return to home page</a>
           </div>
-          <div class="field btn">
-            <div class="btn-layer"></div>
-            <input type="submit" value="Login" (click)="login()">
-          </div>
+          <button [disabled]="loading" class="btn btn-primary">
+            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+            Login
+          </button>
+          <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
         </form>
            <span> Not a member? <a routerLink="/register" class="btn-router">Signup now</a></span>
       </div>
