--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,4 @@
+
 <header>
   <div class="website-header">
     <img src="../../../../assets/images/mainLogo.png">
@@ -37,10 +38,16 @@
     <a class="nav-link" routerlink="#">Võ thuật</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerlink="#">Chế ảnh</a>
+    <div *ngIf="loading" class="spinner-border spinner-border-sm"></div>
+    <div *ngIf="currentUser">
+      <li>Hello: {{currentUser.username}}</li>
+    </div>
 </li>
 <li class="nav-item">
-    <a class="nav-link" routerlink="#">Chế ảnh</a>
+
+  <div *ngIf="currentUser">
+    <a class="nav-item nav-link" (click)="logout()">Logout</a>
+  </div>
 </li>
 </ul>
 </div>
